corrigé bug sur la version mobile

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
 
 html{
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  /* background-color: black; */
+  -ms-overflow-style: none; 
+   /* background-color: black; */
+}
+
+html::-webkit-scrollbar {
+  display: none;
 }
